Add experimental nix and home-manager setup
Install most user-facing packages using nix.  A lot of them have issues on
non-NixOS distros, so I'm not really sure this is a good idea, but it would be
nice to be able to reuse nix for packages across operating systems (linux, OSX, WSL).

- Add post-install function to install nix packages and perform any home-manager
  configuration
- Fix small cursor issue (export in .profile) and update themes
- Add nix-darwin to flake with additional packages have used on OSX (untested)
- Add own overlay for emacsGit to use the configuration options I want and
  install emacs-plus patches on OSX
- Remove siji_ttf_setup (it's in the aur)
- Cleanup pacman packages (nix is now in official repos, remove unused)

--- a/startup/.bxinitrc
+++ b/startup/.bxinitrc
@@ -82,6 +82,7 @@ rldkbd
 
 # faster key repeat rate and shorter delay (default is 660 25)
 # https://github.com/39aldo39/klfc/issues/10
+# 400ms wait, 35 repeats per second
 xset -r 25
 xset r rate 400 35
 
