TLP - Re-enable

--- a/root/etc/tlp.d/my.conf
+++ b/root/etc/tlp.d/my.conf
@@ -1,17 +1,15 @@
 # /etc/tlp.d/*.conf override defaults, are overriden by /etc/tlp.conf changes
 # have own config file rather than altering /etc/tlp.conf (which exists by default)
 
-# disable until can figure out broken hibernate/suspend
-TLP_ENABLE=0
+# if need to disable due to some issue
+# TLP_ENABLE=0
 
 # standard recommendation when normally on AC
 START_CHARGE_THRESH_BAT0=75
 STOP_CHARGE_THRESH_BAT0=80
 
+# previously resume on battery was broken on my laptop, but the issue is now fixed for me:
 # https://github.com/linrunner/TLP/issues/593
-# fix suspend/hibernate? doesn't seem to work... but causes flickering
-# needs retesting
-# AHCI_RUNTIME_PM_ON_BAT=on
 
 # used to be necessary for btrfs and on some devices
 # SATA_LINKPWR_ON_BAT="max_performance"
