Update configuration to support multi-monitor setup
- Update autorandr config
  - Never set gamma
  - Add preswitch to save profile since autorandr --config is unreliable
  - Handle monitor plugged in before starting x (run autorandr in autostart)
- hc_monitor_setup - setup things differently depending on whether connecting to a screen intended to be used as a monitor vs. one intendend to be used as a tv
  - Don't lock tag for monitor (use any tag rather than one dedicated to media)
  - Run another polybar on monitor
  - Set wallpaper on monitor
  - Show notifications on monitor if it's focused
  - Don't use audio through HDMI on monitor (I use headphones not speakers)
  - Require explict keybinding to switch between monitors (and enable swap_monitors_to_get_tag) and improve that keybinding (super + comma)
  - Add config to run redshift on all screens (but don't enable for now)

For all babashka scripts:
- Use loop-lines helper that checks there's still output and removes some boilerplate
- Prefer shell over sh if want to see output

--- a/aesthetics/.config/polybar/config.ini
+++ b/aesthetics/.config/polybar/config.ini
@@ -43,6 +43,9 @@ cyan = ${xrdb:color14:#78b3cc}
 ; causes above issue; don't need for hiding since can use xdotool
 ; enable-ipc = true
 
+; will fall back to primary if unset
+monitor = ${env:POLYBAR_MONITOR:}
+
 width = ${env:BAR_WIDTH:100%}
 height = ${env:BAR_HEIGHT:3%}
 offset-x = ${env:BAR_X_OFFSET:0}
@@ -138,7 +141,8 @@ wm-text = %{T8}%{T-}  holowm
 modules-left = wm-text ewmh hlwmlayout mpd
 
 [settings]
-screenchange-reload = true
+;; don't reload when screen configuration changes; causes unnecessary flicker
+screenchange-reload = false
 
 [global/wm]
 ; set _NET_WM_STRUT_PARTIAL (see ./../../../scripts/bin/dropdown)
@@ -245,11 +249,14 @@ icon-9 = 十;
 
 [module/hlwmlayout]
 type = custom/script
-exec = xrestart -f hlwm_layout_icon
+; TODO xrestart causes infinite herbstclients when running on multiple monitors
+; but this will leave extra processes around when reloading herbstluftwm
+exec = hlwm_layout_icon
 tail = true
 
 [module/mpd]
 type = custom/script
+; script output should be shared across polybar instances
 exec = xrestart -f song_scroll
 tail = true
 
@@ -257,6 +264,7 @@ label-foreground = ${colors.green}
 
 [module/title]
 type = custom/script
+; script output should be shared across polybar instances
 exec = xrestart -f title_scroll
 tail = true
 
