--- a/media/.config/mvi/input.conf
+++ b/media/.config/mvi/input.conf
@@ -117,7 +117,7 @@ p-x apply-profile no-shaders ; show-text "Profile: no shader"
 
 # * Image Manipulation and Wallpaper setting
 c ignore
-c-w run "walset" "--store" "--zoom" "${path}"
+c-w run "walset" "--zoom" "${path}"
 
 # * Other
 # slide show
