--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -66,7 +66,7 @@ map ud shell trash-restore
 # just change wallpaper; ~/bin/bgset
 map cb shell bgset -z %d/%f &> /dev/null &
 # change and store wallpaper and set theme with wal; see ~/bin/walset
-map cw shell -sf walset --store --zoom %f
+map cw shell -sf walset --zoom %f
 
 # image magick
 # change rotation; image rotate with imagemagick
