Mirror kyria (external keyboard) changes on laptop
- Update symbol/altgr and navigation/extend layers
- Switch from kmonad to kanata (which fixes the issues that were preventing me
  from using it primarily)
- Use kanata to remap trackpoint buttons so they can be dual-role keys (with
  xcape or with kanata directly)
- Put all of open paren/bracket/brace on thumb keys (using trackpoint buttons
  for bracket and paren)
- Replace klfc+xmodmap+xcape+kanata+sxhkd+hkd with kanata+sxhkd (keep former as
  backup though)
- Unbind left shift, capslock, tab, and backspace to force to use thumb keys
- Further increase repeat rate and reduce time before repeat

Rldkbd:
- Have it handle all keyboard setup including restarting hotkey daemon (also
  necessary so can run in background rather than blocking while kanata starts up)
- Fix herbstluftwm backup rldkbd keybinding
- Remove xchainkeys config (not available and not needed; using hc keybind for backup)

Update extend layer:
- Bind extend+w to control+backspace (backspace word behavior without closing
  things some places like control+w); fix control+backspace in zsh
- Remove extend+f as grave (mouse movement on external keyboard, nothing on
  laptop keyboard)
- Bind printscreen as extend+p (so I don't have to go looking for it or
  accidentally press it)
- Bind media and brightness keys on extend layer
  - Unfoturnately sxhkd fails to grab them (when using klfc, not kanata); using
  hkd as a workaround
- Bind C-Tab and C-S-Tab on thumb keys

Add more sxhkd keybindings
- Bind media keys that are now on extend layer
- Bind warpd hint commands to try out
- Bind key to take screenshot in most recent mpv instance (and change screenshot
  template to match normal one)
- Use playerctl instead of mpc to also handle spotify
- Bind a key to toggle anything with playerctl (also youtube)
- Use super+control as hotkey to allow using alt (opposite side of keyboard)
  instead of shift in hotkey combinations
- Also add sxhkdrc-mode Emacs packa

--- a/media/.config/mpv/config
+++ b/media/.config/mpv/config
@@ -3,6 +3,9 @@
 
 # * Default Profile
 [default]
+# to be able to send commands to most recent mpv instance; also required for svp
+input-ipc-server=/tmp/mpvsocket
+
 save-position-on-quit
 
 # disable screen blanking while video playing (default)
@@ -59,7 +62,7 @@ gpu-api=vulkan
 # ** Screenshots
 # %F is title with removed extension; if include it, some filenames cause errors
 # when saving the screenshot
-screenshot-template=~/move/Screenshots/%tY.%tm.%td_%tH:%tM:%tS
+screenshot-template=~/move/Screenshots/%tFT%tT
 # jpeg is default
 screenshot-format=png
 
