--- a/media/.config/mpv/input.conf
+++ b/media/.config/mpv/input.conf
@@ -218,6 +218,8 @@ t-i add sub-delay +5
 t-y set sub-delay 0
 
 # * Video
+ENTER cycle pause
+
 # cycle through video streams
 # NOTE: Use --force-window when not running in terminal or cycling can hide mpv
 # window with no way to get it back
