Optimus-manager - Use nvidia mode by default
Performance has serious issues when using external monitor in hybrid mode (and
monitor will often freeze and need to be replugged in).

--- a/root/etc/mkinitcpio-custom-systemd.conf
+++ b/root/etc/mkinitcpio-custom-systemd.conf
@@ -5,6 +5,7 @@ BINARIES=()
 FILES=()
 
 # see /etc/mkinitcpio.d/linux-ck.preset for info
+# no kms to ensure nouveau is not loaded
 HOOKS=(base systemd autodetect keyboard sd-vconsole modconf block sd-encrypt sd-lvm2 filesystems fsck)
 
 # faster decompression
