--- a/root/etc/mkinitcpio.conf
+++ b/root/etc/mkinitcpio.conf
@@ -5,6 +5,7 @@ BINARIES=()
 FILES=()
 
 # see /etc/mkinitcpio.d/linux-ck.preset for info
+# no kms to ensure nouveau is not loaded
 HOOKS=(base udev autodetect keyboard keymap consolefont modconf block encrypt lvm2 filesystems resume fsck)
 
 # faster decompression
