--- a/root/etc/optimus-manager/optimus-manager.conf
+++ b/root/etc/optimus-manager/optimus-manager.conf
@@ -2,13 +2,16 @@
 # NOTE: correct .xinitrc is necessary to prevent black screen issue
 [optimus]
 # allows using monitor in intel mode (but with bad performance)
+# nouveau only used in intel mode
 switching=nouveau
 pci_power_control=yes
 pci_remove=no
 pci_reset=no
 
+# hybrid performance is too bad on external monitor (even without picom)
+startup_mode=nvidia
 # use GPU only when told to
-startup_mode=hybrid
+# startup_mode=hybrid
 
 [nvidia]
 # don't touch DPI
