--- a/root/etc/X11/xorg.conf.d/my-xorg.conf
+++ b/root/etc/X11/xorg.conf.d/my-xorg.conf
@@ -39,3 +39,6 @@ Section "Device"
 	Identifier "Intel Graphics"
 	Driver "intel"
 EndSection
+
+# * GPU
+# handled by optimus-manager; not recommended to mess with
