Nix - Fix various issues
- Fix picom on GPU - don't install through nix (and already not using
  hybrid) (ysui/picom#1060)
- Use polybar's update tray module and let it handle its rounded corners
- Fix Emacs jinx - since dynamic module, must also be installed through nix
- Switch to trashy for trashing (keep trash-cli for restore)
- Don't install gpg and pass through nix (version mismatch issues)
- Remove more graphical applications (e.g. mpv) and other programs that I was
  having issues with
- Don't manually lock emacs-overlay to a commit (broke installing jinx and
  unnecessary with flake.lock)
- Add untested WSL configuration; add emacsPgtk for wslg
- Start using unclutter now that trackpoint buttons are actually keys not mouse
  buttons

--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -28,7 +28,6 @@ glx-no-rebind-pixmap = true;
 use-damage = true;
 
 # * Tearing
-# TODO try xr_glx_hybrid with/without --vsync-use-glfinish
 vsync = true;
 
 # don't unredirect all windows when there is an opaque fullscreen window (true
@@ -75,21 +74,21 @@ fading = true;
 fade-delta = 3;
 
 # * Dimming
-inactive-dim = 0.1;
+inactive-dim = 0.3;
 
 fade-exclude = [
     "class_g = 'slop'",
 ];
 
 # * Rounded Corners
+# TODO read from environment variable; somewhat related:
+# https://github.com/yshui/picom/issues/931
 corner-radius = 15.0;
 
-# keep for now
-# https://github.com/polybar/polybar/issues/651
-# rounded-corners-exclude = [
-#     # let polybar round its own corners
-#     "class_g = 'Polybar'",
-# ]
+rounded-corners-exclude = [
+    # let polybar round its own corners
+    "class_g = 'Polybar'",
+]
 
 # * Focus
 # consider these windows always focused (so not dimmed)
