--- a/aesthetics/.config/polybar/config.ini
+++ b/aesthetics/.config/polybar/config.ini
@@ -52,8 +52,6 @@ offset-x = ${env:BAR_X_OFFSET:0}
 offset-y = ${env:BAR_Y_OFFSET:0}
 ; use system dpi (only affects fonts that can be scaled)
 dpi = 0
-; allow tray icons to scale to be larger
-tray-maxsize = ${env:TRAY_HEIGHT:100%}
 
 padding = 2
 underline-size = ${env:BAR_BORDER:6}
@@ -104,10 +102,7 @@ font-9 = Unifont:style=Sans-Serif
 font-10 = Siji:pixelsize=13
 
 modules-center = title
-modules-right = memory cpu temperature battery backlight volume wlan eth wg date
-
-tray-position = right
-tray-padding = 2
+modules-right = memory cpu temperature battery backlight volume wlan eth wg date tray
 
 [bar/bspwm]
 inherit = bar/base
@@ -395,6 +390,10 @@ format-disconnected =
 [module/wg]
 type = custom/script
 exec = ~/.config/polybar/wg.sh
+
+[module/tray]
+type = internal/tray
+format = <tray>
 
 ; Local Variables:
 ; eval: (rainbow-mode 1)
