--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -58,9 +58,13 @@ alias travel scout -aefkst
 # * Mappings
 # ** Shell Commands
 unmap dD
-# to trash with trash-cli instead of delete
-map di shell trash-put %s || trash-put %f
+# to trash instead of delete
+map di shell trash-ignore-empty %s || trash-put-ignore-empty %f
+
 # default ud is a duplicate of uy
+# prefer over trashy's trash restore since it will be interactive for the
+# current directory by default (trash restore currently can only be one or the
+# other)
 map ud shell trash-restore
 
 # just change wallpaper; ~/bin/bgset
