Ranger - Add <c-backspace> keybinding and update ux keybinding
Force atool to always extract to a folder of the same name as the archive even
if the archive has only one file/directory.  This matches the behavior of
dired-atool-do-unpack-with-subdirectory (my ux keybinding in dired).

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -122,7 +122,7 @@ map ui console -p13 shell imp -t -c %%f
 map uI shell imp -a %f
 
 # extract archive
-map ux shell atool -x %s || atool -x %f
+map ux shell atool -xD %s || atool -xD %f
 # extract and delete selected or highlighted archive
 map tx shell exd %s || exd %f
 
@@ -258,6 +258,12 @@ map tgu unstage
 map tgl log
 # can also show diff between selected files
 
-# ** Command Mode Maps
+# ** Console/Command Mode Maps
 # backspace a word
-cmap ¸ eval fm.ui.console.delete_word()
+# https://github.com/ranger/ranger/issues/2064
+# cmap <C-backspace> eval fm.ui.console.delete_word()
+# TODO this is not c-backspace in tmux
+cmap <8> eval fm.ui.console.delete_word()
+
+# TODO this is default but it doesn't work...
+# cmap <C-y> eval fm.ui.console.paste()
