Nix-darwin and macOS home-manager fixes
Nix-darwin and home-manager
- Fix some setting names that need quotes
- Don't remove brew packages installed elsewhere
- Add wezterm installed through brew (will try to install newer version with nix
  overlay later once can test to see if nixGL is necessary and if it owrks well)
- Set up skhd and yabai services

Emacs overlay
- Add generic configuration for all versions (e.g. yes to treesitter)
- Add another emacs-plus patch and fix hashes
- Add vterm to packages to include so that it works on macOS

Nix package changes
- Remove more X or linux-dependent packages from common nix packages (xterm is
  X-dependent and I don't use, fcron depends on busybox, etc.)
- Add gawk to use from scripts on macOS
- Switch back completely to trash-cli (trashy has worse annoyances)
- Add nix-index for searching the store

Emacs
- Add emacs-everywhere and global keybinding
- Add applescript-mode
- Fix dired-listing-switches to support ls installed through nix on
  darwin (dirvish preview is still not working and needs investigation)
- Set frame parameter for Emacs to have no titlebar and rounded corners on
  macOS (requires Emacs patch, see emacs.nix)
- Pull noct-vterm-select-or-create out of vterm-toggle so that it is available
  immediately
- Bind SPC to org-capture in shell menu (since removed dedicated keybinding)
- Fix some "defining as dynamic an already lexical var"
  errors (e.g. with (defvar vertico-count))

Zsh
- Don't alias ls; since zsh is default shell this will mess up dired

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -59,7 +59,7 @@ alias travel scout -aefkst
 # ** Shell Commands
 unmap dD
 # to trash instead of delete
-map di shell trash-ignore-empty %s || trash-put-ignore-empty %f
+map di shell trash-ignore-empty %s || trash-ignore-empty %f
 
 # default ud is a duplicate of uy
 # prefer over trashy's trash restore since it will be interactive for the
