--- a/nix/.config/nix/nix.conf
+++ b/nix/.config/nix/nix.conf
@@ -2,3 +2,10 @@
 # https://nixos.wiki/wiki/Nix_command
 # https://nixos.wiki/wiki/Flakes
 experimental-features = nix-command flakes
+
+# maybe change eventually if it doesn't become the default
+# removes the need for nixbld* users, but they are created by default already
+# auto-allocate-uids = true
+
+# not setting since store optimization can take a very long time
+# auto-optimise-store = true
