Ranger - Use pistol for preview handling

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -39,7 +39,14 @@ set preview_images true
 # doesn't work in tmux
 # set preview_images_method kitty
 # set preview_images_method pqiv
+# ueberzug is currently the fastest
+# https://github.com/ranger/ranger/issues/2758
 set preview_images_method ueberzug
+# set preview_images_method iterm2
+
+# use custom preview script
+set use_preview_script true
+set preview_script ~/bin/media/pistol-preview
 
 # open all images in folder with image viewer when none selected
 # opens in ranger order but doesn't work if thousands of images in folder
@@ -57,6 +64,8 @@ alias travel scout -aefkst
 
 # * Mappings
 # ** Shell Commands
+map S shell zsh
+
 unmap dD
 # to trash instead of delete
 map di shell trash-ignore-empty %s || trash-ignore-empty %f
@@ -197,6 +206,8 @@ map K search_next forward=False
 map f console find%space
 map F console travel%space
 # TODO this overwrites ability to get history
+# doesn't currently seem possible
+# https://github.com/ranger/ranger/issues/573
 # cmap <up> move up=1
 # cmap <down> move down=1
 # see commands.py
