Aesthetics - Minor Updates
- Reduce blur strength
- Use yellow border colors (when color is actually cyan, doesn't look great)
- Add rose-pine-hybrid (faom/cyan form the light theme) and rose-pine-moon
  pywal themes
- Make bgset work with all monitors by default
- Add a script to set a random wallpaper
- Add catpuccin refind theme
- Add mkinitcpio-colors to set tty colors to rose-pine-moon

- Have hide key toggle frame background on empty desktops

Other refind/boot related
- Add verbose boot entry
- Fix mkinitcpio files (not using linux-ck anymore) and clarify why still using
  udev over systemd (udev already pretty much instant... nowhere near botleneck)

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "mpv-gallery-view"]
 	path = media/.config/mvi/repos/mpv-gallery-view
 	url = https://github.com/occivink/mpv-gallery-view
+[submodule "refind-catppuccin"]
+	path = root/boot/efi/EFI/refind/themes/catppuccin
+	url = https://github.com/catppuccin/refind
