--- a/aesthetics/.config/polybar/config.ini
+++ b/aesthetics/.config/polybar/config.ini
@@ -61,7 +61,7 @@ radius = ${env:CORNER_RADIUS:15}
 
 border-size = ${env:BAR_BORDER:6}
 ; border-color = ${colors.foreground}
-border-color = ${colors.cyan}
+border-color = ${colors.yellow}
 
 line-size = 2
 line-color = #f00
