--- a/root/boot/efi/EFI/refind/refind.conf
+++ b/root/boot/efi/EFI/refind/refind.conf
@@ -2,7 +2,9 @@
 # refind.conf
 # Configuration file for the rEFInd boot menu
 #
-# TODO add entry that isn't quiet
+
+# theme
+include themes/catppuccin/frappe.conf
 
 timeout 20
 
@@ -23,16 +25,21 @@ menuentry "Arch Linux" {
 	# "If plausible deniability is not required, TRIM can be used for its performance gains, provided that the security dangers described at the top of this section are not of concern."
     options  "cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
 
+    submenuentry "Verbose boot" {
+        options "cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y vga=current initrd=/intel-ucode.img"
+    }
+
     submenuentry "Boot using fallback initramfs" {
         initrd /initramfs-linux-zen-fallback.img
     }
 
+	# not using since UUID required; would rather use label
     # submenuentry "Boot using systemd initramfs" {
-    #     initrd /initramfs-linux-ck-custom-systemd.img
+    #     initrd /initramfs-linux-zen-custom-systemd.img
     #     options  "rd.luks.uuid=<uuid>:cryptlinux rd.luks.options=discard resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
     # }
     # submenuentry "Boot using fallback systemd initramfs" {
-    #     initrd /initramfs-linux-ck-custom-systemd-fallback.img
+    #     initrd /initramfs-linux-zen-custom-systemd-fallback.img
     #     options  "rd.luks.uuid=<uuid>:cryptlinux rd.luks.options=discard resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
     # }
 
