--- a/root/etc/mkinitcpio-custom-systemd.conf
+++ b/root/etc/mkinitcpio-custom-systemd.conf
@@ -4,9 +4,24 @@ BINARIES=()
 
 FILES=()
 
-# see /etc/mkinitcpio.d/linux-ck.preset for info
-# no kms to ensure nouveau is not loaded
-HOOKS=(base systemd autodetect keyboard sd-vconsole modconf block sd-encrypt sd-lvm2 filesystems fsck)
+# https://wiki.archlinux.org/index.php/Dm-crypt/System_configuration
+
+# NOTE: Downside of not using udev is that can't use LABELS; I don't think the
+# speed is a big enough difference to make it worth switching
+
+# - have added sd-vconsole (replaces keymap keymap and consolefont),
+#   (sd-)encrypt, (sd-)lvm2, and resume
+# - keyboard before auto-detect to always include all keyboard drivers (so
+#   keyboard will work initially even if was not plugged in when the image was
+#   created)
+# - lvm2 and encrypt should be between block and filesystems; encrypt first
+# - keyboard and keymap should be before encrypt (so can enter password using
+#   custom keyboard layout)
+# - resume must come after udev and lvm2
+# - sd-encrypt can unlock multiple devices (so lvm can span multiple disks) but
+#   that currently requires specifying a UUID
+# - sd-colors from https://github.com/EvanPurkhiser/mkinitcpio-colors
+HOOKS=(base systemd sd-colors keyboard autodetect sd-vconsole modconf block sd-encrypt sd-lvm2 filesystems fsck)
 
 # faster decompression
 COMPRESSION="lz4"
