--- a/root/etc/mkinitcpio.conf
+++ b/root/etc/mkinitcpio.conf
@@ -4,9 +4,10 @@ BINARIES=()
 
 FILES=()
 
-# see /etc/mkinitcpio.d/linux-ck.preset for info
-# no kms to ensure nouveau is not loaded
-HOOKS=(base udev autodetect keyboard keymap consolefont modconf block encrypt lvm2 filesystems resume fsck)
+# - no kms to ensure nouveau is not loaded
+# - colors from https://github.com/EvanPurkhiser/mkinitcpio-colors
+# - see ./mkinitcpio-custom-systemd.conf for more information
+HOOKS=(base udev colors keyboard autodetect keymap consolefont modconf block encrypt lvm2 filesystems resume fsck)
 
 # faster decompression
 COMPRESSION="lz4"
