--- a/root/etc/vconsole.conf
+++ b/root/etc/vconsole.conf
@@ -1,1 +1,19 @@
+# prefer the default bitmap font over others have tried
 KEYMAP=ansi-us-colemak-dh-z-wide-custom
+# https://github.com/EvanPurkhiser/mkinitcpio-colors
+COLOR_0=232136
+COLOR_1=eb6f92
+COLOR_2=ea9a97
+COLOR_3=f6c177
+COLOR_4=3e8fb0
+COLOR_5=c4a7e7
+COLOR_6=9ccfd8
+COLOR_7=e0def4
+COLOR_8=393552
+COLOR_9=eb6f92
+COLOR_10=ea9a97
+COLOR_11=f6c177
+COLOR_12=3e8fb0
+COLOR_13=c4a7e7
+COLOR_14=9ccfd8
+COLOR_15=e0def4
