Mopidy - Minor update
Yes, the tidal plugin works.

Rename rip alias since it overlaps with a real program.

--- a/music/.config/mopidy/mopidy.conf
+++ b/music/.config/mopidy/mopidy.conf
@@ -35,8 +35,7 @@ enabled = true
 [spotify]
 enabled = false
 
-# TODO does this actually work
 [tidal]
-enabled = false
+enabled = true
 quality = LOSSLESS
 # playlist_cache_refresh_secs = 300
