Rifle - Update audio and archive handling
- Prefer opening archives with mvi over pqiv
- Open audio in a terminal rather than block ranger

--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -28,7 +28,7 @@ ext 1, label pager = man "$1"
 mime ^text, label pager = "$PAGER" "$@"
 
 # audio
-mime ^audio|ogg$, terminal, has mpv = mvp --term-osd-bar --no-audio-display "$@"
+mime ^audio|ogg$, flag t, has mpv = mvp --loop-playlist=inf "$@"
 
 # video
 mime ^video, has mpv, X, flag f = tdrop -a auto_hide && mvp --loop=inf "$@" && tdrop -a auto_show
@@ -57,7 +57,8 @@ ext exe = wine "$1"
 # needs higher precedence than archives
 ext jar, flag f = java -jar "$1"
 # TODO can detect that an archive contains images?
-ext cbz|cbr|zip, flag f = tdrop -a auto_hide && pqiv -n "$1" && tdrop -a auto_show
+ext cbz|cbr|zip, has mvi, flag f = tdrop -a auto_hide && mvi "$1" && tdrop -a auto_show
+ext cbz|cbr|zip, has pqiv, flag f = tdrop -a auto_hide && pqiv -n "$1" && tdrop -a auto_show
 
 # archives
 ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz, has atool = atool -l "$@" | "$PAGER"
