Bootloader - Improvements and troubleshooting steps
Add systemd-boot as fallback (used when had screwed up refind configuration).

--- a/root/boot/efi/EFI/refind/refind.conf
+++ b/root/boot/efi/EFI/refind/refind.conf
@@ -10,6 +10,9 @@ timeout 20
 
 scanfor manual,internal
 
+# to use %v in refind_linux.conf
+extra_kernel_version_strings linux-zen,linux
+
 menuentry "Arch Linux" {
     icon     /EFI/refind/icons/os_arch.png
     # label
