Switch to new ssd

--- a/root/boot/loader/entries/arch-old.conf
+++ b/root/boot/loader/entries/arch-old.conf
@@ -8,4 +8,4 @@ initrd /initramfs-linux-zen.img
 # https://wiki.archlinux.org/title/Dm-crypt/Specialties#Discard/TRIM_support_for_solid_state_drives_(SSD)
 # https://asalor.blogspot.com/2011/08/trim-dm-crypt-problems.html
 # "If plausible deniability is not required, TRIM can be used for its performance gains, provided that the security dangers described at the top of this section are not of concern."
-options cryptdevice=LABEL=prolinux:prolinux:allow-discards resume=/dev/prolinux_group/swap root=/dev/prolinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash
+options cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash
