--- a/root/boot/efi/EFI/refind/refind.conf
+++ b/root/boot/efi/EFI/refind/refind.conf
@@ -16,7 +16,7 @@ extra_kernel_version_strings linux-zen,linux
 menuentry "Arch Linux" {
     icon     /EFI/refind/icons/os_arch.png
     # label
-    volume   boot
+    volume   proboot
     # these are relative to the volume! (actually /boot/vmlinuz...)
     loader   /vmlinuz-linux-zen
     initrd   /initramfs-linux-zen.img
@@ -26,10 +26,10 @@ menuentry "Arch Linux" {
 	# https://wiki.archlinux.org/title/Dm-crypt/Specialties#Discard/TRIM_support_for_solid_state_drives_(SSD)
 	# https://asalor.blogspot.com/2011/08/trim-dm-crypt-problems.html
 	# "If plausible deniability is not required, TRIM can be used for its performance gains, provided that the security dangers described at the top of this section are not of concern."
-    options  "cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
+    options  "cryptdevice=LABEL=prolinux:prolinux:allow-discards resume=/dev/prolinux_group/swap root=/dev/prolinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
 
     submenuentry "Verbose boot" {
-        options "cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y vga=current initrd=/intel-ucode.img"
+        options "cryptdevice=LABEL=prolinux:prolinux:allow-discards resume=/dev/prolinux_group/swap root=/dev/prolinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y vga=current initrd=/intel-ucode.img"
     }
 
     submenuentry "Boot using fallback initramfs" {
