Ranger - Switch to unarachiver for extraction
It handles more formats (doesn't require renaming cbz to zip) and works with
foreign encoding/format without garbling file names.

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -131,7 +131,8 @@ map ui console -p13 shell imp -t -c %%f
 map uI shell imp -a %f
 
 # extract archive
-map ux shell atool -xD %s || atool -xD %f
+# map ux shell atool -xD %s || atool -xD %f
+map ux shell unarchive %s || unarchive %f
 # extract and delete selected or highlighted archive
 map tx shell exd %s || exd %f
 
