--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -60,9 +60,9 @@ ext jar, flag f = java -jar "$1"
 ext cbz|cbr|zip, has mvi, flag f = tdrop -a auto_hide && mvi "$1" && tdrop -a auto_show
 ext cbz|cbr|zip, has pqiv, flag f = tdrop -a auto_hide && pqiv -n "$1" && tdrop -a auto_show
 
-# archives
+# show archive contents
 ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz, has atool = atool -l "$@" | "$PAGER"
-ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has atool = atool -l "$@" | "$PAGER"
+ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip|cbz, has atool = atool -l "$@" | "$PAGER"
 
 # flash
 ext swf = firefox "$@"
