--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -27,11 +27,8 @@ ext org, label editor = $EDITOR "$@"
 ext 1, label pager = man "$1"
 mime ^text, label pager = "$PAGER" "$@"
 
-# audio
-mime ^audio|ogg$, flag t, has mpv = mvp --loop-playlist=inf "$@"
-
-# video
-mime ^video, has mpv, X, flag f = tdrop -a auto_hide && mvp --loop=inf "$@" && tdrop -a auto_show
+# audio and video
+mime ^video|audio|ogg$, has mpv, X, flag f = tdrop -a auto_hide && mvp --loop=inf "$@" && tdrop -a auto_show
 
 # video in framebuffer
 mime ^video, terminal, !X, has vlc = vlc "$@"
