Update post-install script after having to use again
I had to do a reinstall.  Despite having not used it in many years, it was not
anywhere near as broken as I would have guessed.

- Delete unused saltstack stuff
- Fix incorrect or changed packages names (and add/remove "aur" when necessary)
- Update to allow running any individual function
- Better group commands and add more shorthand, e.g.:
  - "install" for package installation
  - "config" for symlinking and copying configuration files
- Use local for local variables
- Improve logging
  - Don't clobber old log files
  - Log full output to sectioned org file
  - Allow sharing log file with extra-setup
  - Mention vpn setup must currently be done manually
- Fix group setup by creating groups if they don't exist
- Fix user has password check (previously always prompted to set root password)
- Fix emacs install function
- Don't try to run/setup nix in chroot
- Add pacman group installation method (previously would always reinstall
  groups)
- Remove pip installation method; use pacman for python libraries and pipx for
  binaries
- Fix qmk setup function
- I can no longer install light, so I switched to acpilight
- Fix restow
- Fix playerctld
- Add some extra debug logging to x startup

Tangentially related:
- Make org subscript/superscript req explicit curly braces (default makes logs
  and other files with underscores annoying to read)

--- a/startup/.bxinitrc
+++ b/startup/.bxinitrc
@@ -25,6 +25,7 @@ if [[ -z $NVIDIA_XRUN ]]; then
 	# necessary for laptop screen to not be black and to show up in xrandr
 	# --listmonitors in nvidia mode (but not hybrid mode); prime-offload maybe
 	# used to run it, but it does not currently
+	echo "Running xrandr auto"
 	xrandr --auto
 fi
 
@@ -42,7 +43,10 @@ fi
 # current laptop even when connected to HDMI when starting X but may need to be
 # changed if I start using displayport or thunderbolt
 primary=$(xrandr --listmonitors | awk 'NR>1 && !/HDMI/ {print $NF; exit}')
+echo "Available monitors: $(xrandr --listmonitors)"
+echo "Primary output: $primary"
 xrandr --output "$primary" --primary
+
 # NOTE: the consequence of setting the primary monitor incorrectly is that
 # autorandr --change will fail; I'm calling autorandr separately in
 # herbstluftwm's autostart (so herbstluftwm-specific changes will be triggered)
