Picom - Temporarily disable vsync
https://github.com/yshui/picom/issues/1265

After a somewhat recent update, picom with vsync enabled causes
slowdown/freezing, and I'm having other nvidia issues (e.g. various issues with
mpv failing to open).

Because I've disable vsync, screen tearing is very bad by default, so I'm
enabling force full composition pipeline now to prevent it.

--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -28,7 +28,8 @@ glx-no-rebind-pixmap = true;
 use-damage = true;
 
 # * Tearing
-vsync = true;
+# https://github.com/yshui/picom/issues/1265
+vsync = false;
 
 # don't unredirect all windows when there is an opaque fullscreen window (true
 # maximizes performance but disables compositing)
