--- a/root/etc/X11/xorg.conf.d/my-xorg.conf
+++ b/root/etc/X11/xorg.conf.d/my-xorg.conf
@@ -42,3 +42,16 @@ EndSection
 
 # * GPU
 # handled by optimus-manager; not recommended to mess with
+
+# TODO for now am doing manually; see fixtear script
+# https://wiki.archlinux.org/title/NVIDIA/Troubleshooting#Multi-monitor
+# fix screen tearing
+# only keep screen section
+# Section "Screen"
+#     Identifier     "Screen0"
+#     Device         "Device0"
+#     Monitor        "Monitor0"
+#     Option         "ForceFullCompositionPipeline" "on"
+#     Option         "AllowIndirectGLXProtocol" "off"
+#     Option         "TripleBuffer" "on"
+# EndSection
