Mpv - Minor keybinding additions

--- a/media/.config/mpv/input.conf
+++ b/media/.config/mpv/input.conf
@@ -160,6 +160,7 @@ DOWN no-osd seek -0.5 - exact
 UP no-osd seek +0.5 - exact
 LEFT seek -0.25 - exact
 RIGHT seek 0.25 - exact
+j seek -15 - exact
 
 # k add chapter 1
 # K add chapter -1
