--- a/media/.config/mvi/input.conf
+++ b/media/.config/mvi/input.conf
@@ -56,6 +56,7 @@ MBTN_LEFT script-binding drag-to-pan
 # ./scripts/noct-image-util.lua
 u script-message zoom-out-or-cycle-thumbnail-size
 y script-message zoom-in-or-cycle-thumbnail-size
+l no-osd set video-zoom 0; script-message reset-pan-if-visible
 = no-osd set video-zoom 0; script-message reset-pan-if-visible
 # above is good enough
 # ctrl+0  no-osd set video-pan-x 0; no-osd set video-pan-y 0; no-osd set video-zoom 0
@@ -83,6 +84,7 @@ alt+r no-osd set video-rotate 0
 # * Comic Mode
 # ./scripts/noct-image-util.lua
 SPACE script-message comic-toggle h i
+BS script-message comic-toggle h i
 
 # * TODO Filters
 # grayscale
