Picom - Add animation config

--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -68,7 +68,7 @@ blur-background-exclude = [
 ]
 
 # * Fading
-fading = true;
+fading = false;
 # decrease fade duration (ms)
 fade-delta = 3;
 
@@ -111,3 +111,25 @@ wintypes:
         opacity = 0.85;
     };
 };
+
+# * Animations
+animations = (
+    {
+        triggers = [ "close", "hide" ];
+        preset = "disappear";
+        scale = 0.9;
+        duration = 0.2;
+    },
+    {
+        triggers = [ "open", "show" ];
+        suppressions = [ "geometry" ];
+        preset = "appear";
+        scale = 0.9;
+        duration = 0.2;
+    },
+    {
+        triggers = [ "geometry" ];
+        preset = "geometry-change";
+        duration = 0.2;
+    }
+);
