Polybar - Minor updates
- Fix dpi when forcing full composition pipeline (fixtear script)
- Don't show wifi section when connected to ethernet
- Slightly decrease polybar height

--- a/aesthetics/.config/polybar/config.ini
+++ b/aesthetics/.config/polybar/config.ini
@@ -50,8 +50,10 @@ width = ${env:BAR_WIDTH:100%}
 height = ${env:BAR_HEIGHT:3%}
 offset-x = ${env:BAR_X_OFFSET:0}
 offset-y = ${env:BAR_Y_OFFSET:0}
-; use system dpi (only affects fonts that can be scaled)
-dpi = 0
+
+; 0 - use system dpi (only affects fonts that can be scaled)
+; using environment variable because forcing full composition pipeline breaks detection
+dpi = ${env:POLYBAR_DPI:0}
 
 padding = 2
 underline-size = ${env:BAR_BORDER:6}
@@ -368,7 +370,7 @@ interval = 3
 format-connected = <ramp-signal>
 format-connected-foreground = ${colors.dark-cyan}
 
-format-disconnected = 
+format-disconnected =
 format-disconnected-foreground = ${colors.dark-cyan}
 
 ramp-signal-0 = 
